--- a/views/pages/discover.hbs
+++ b/views/pages/discover.hbs
@@ -1,11 +1,7 @@
-{{> head}}
-
-<body class="h-100 d-flex flex-column">
-  {{> nav}}
 
   <main class="container py-4">
     <h1>Discover Events</h1>
-    
+    <img src = "{{profile}}" />
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       {{#each events}}
         <div class="col">
@@ -22,5 +18,3 @@
     </div>
   </main>
 
-  {{> footer}}
-</body>
